fix(fab-button): no space taken by off-screen content

--- a/assets/scss/components/_fab-button.scss
+++ b/assets/scss/components/_fab-button.scss
@@ -17,6 +17,7 @@ $fab-button-scroll-top: 200px;
           opacity: 0;
           transition-duration: 0s;
           pointer-events: none;
+          width: 0;
         }
       }
     }
